# rust-html-editor

./: .gitignore  BlueGriffon_features.html  README.md  VERSION  build.sh  index.html  joyful-orbiting-hopper.md  package.json  vite.config.js
config/: menu_toolbar.yaml
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_STRUCTURE.md  INSTALL.md  USAGE.md
scripts/: generate_menu_toolbar.py
src/: css_injector.js  dirty_guard.js  editor.js  find_replace.js  generated_menu_actions.js  generated_toolbar_data.js  main.js  sidebar.js  source_view.js  status_bar.js  toolbar.js  zoom.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  generated_menu.rs  html_parser.rs  lib.rs  main.rs  menu.rs  project.rs
src/styles/: default_book.css  find_replace.css  main.css
